Add some apis
