# src/controllers/exerciseController.js
@@ -12,9 +12,22 @@ module.exports = {
             });
         }
     },
-    getExercises: async function (req, res) {
+    getAllExercises: async function (req, res) {
         try {
-            let exercises = await exerciseService.getExercises(req.query.id);
+            let exercises = await exerciseService.getAllExercises();
+            return res.status(200).json(exercises);
+        } catch (error) {
+            return res.status(200).json({
+                errCode: -1,
+                errMessage: "Error from server",
+            });
+        }
+    },
+    getExercisesById: async function (req, res) {
+        try {
+            let exercises = await exerciseService.getExercisesById(
+                req.query.id
+            );
             return res.status(200).json(exercises);
         } catch (error) {
             return res.status(200).json({
@@ -37,6 +50,17 @@ module.exports = {
     deleteExercises: async function (req, res) {
         try {
             let exercises = await exerciseService.deleteExercises(req.query.id);
+            return res.status(200).json(exercises);
+        } catch (error) {
+            return res.status(200).json({
+                errCode: -1,
+                errMessage: "Error from server",
+            });
+        }
+    },
+    confirmDoExercise: async function (req, res) {
+        try {
+            let exercises = await exerciseService.confirmDoExercise(req.body);
             return res.status(200).json(exercises);
         } catch (error) {
             return res.status(200).json({
