# src/routes/exercises.js
@@ -5,8 +5,10 @@ const router = express.Router();
 const exerciseController = require("../controllers/exerciseController");
 
 router.post("/create-new-exercise", exerciseController.createNewExercise);
-router.get("/get-exercises", exerciseController.getExercises);
+router.get("/get-all-exercises", exerciseController.getAllExercises);
+router.get("/get-exercises-by-id", exerciseController.getExercisesById);
 router.put("/update-exercises", exerciseController.updateExercises);
 router.get("/delete-exercises", exerciseController.deleteExercises);
+router.post("/confirm-do-exercise", exerciseController.confirmDoExercise);
 
 module.exports = router;
